# open-mpic-containers

./: .gitignore  README.md
.github/workflows/: build.yml  test.yml
api-implementation/: Dockerfile  Makefile  README.md  docker-compose.dcv-load-test.yml  docker-compose.test.yml  docker-entrypoint.sh  pyproject.toml  run_uvicorn.py  uvicorn_config.yaml
api-implementation/load-tests/: chart.py
api-implementation/load-tests/dcv-http-01/: body.json  vegeta-targets.txt
api-implementation/src/common_configuration/: opentelemetry_configuration.py
api-implementation/src/mpic_caa_checker_service/: main.py
api-implementation/src/mpic_caa_checker_service/config/: app.conf
api-implementation/src/mpic_coordinator_service/: main.py
api-implementation/src/mpic_coordinator_service/config/: app.conf  log_config.yaml
api-implementation/src/mpic_coordinator_service/resources/: available_perspectives.yaml
api-implementation/src/mpic_dcv_checker_service/: main.py
api-implementation/src/mpic_dcv_checker_service/config/: app.conf
api-implementation/test-server/: Caddyfile  Dockerfile
api-implementation/test-server/www/.well-known/pki-validation/: challenge.txt
api-implementation/tests/integration/: test_deployed_mpic_api.py  test_smoke_deployed_mpic_api.py  testing_api_client.py
api-implementation/tests/load/: local_docker_compose_locustfile.py  locustfile.py
api-implementation/tests/resources/: available_test_perspectives.yaml  target_domains.txt
api-implementation/tests/unit/: conftest.py  test_mpic_caa_checker_service.py  test_mpic_coordinator_service.py  test_mpic_dcv_checker_service.py
deployment-examples/amazon-ec2/: aws_region_config.yaml  compose.yaml.template  config.example.yaml  configure.py  install.py
deployment-examples/kubernetes/: README.md
deployment-examples/kubernetes/open-mpic/: README.md  kustomization.yaml
deployment-examples/kubernetes/open-mpic/mordor-east-1/: gateway.yaml  kustomization.yaml  namespace.yaml
deployment-examples/kubernetes/open-mpic/mordor-east-1/caa-checker/: kustomization.yaml
deployment-examples/kubernetes/open-mpic/mordor-east-1/caa-checker/files/: app.conf
deployment-examples/kubernetes/open-mpic/mordor-east-1/coordinator/: deploy.yaml  kustomization.yaml  service.yaml
deployment-examples/kubernetes/open-mpic/mordor-east-1/coordinator/files/: app.conf  available_perspectives.yaml
deployment-examples/kubernetes/open-mpic/mordor-east-1/dcv-checker/: deploy.yaml
deployment-examples/kubernetes/open-mpic/mordor-east-1/dcv-checker/files/: app.conf
deployment-examples/kubernetes/open-mpic/shire-west-1/: kustomization.yaml  namespace.yaml
deployment-examples/kubernetes/open-mpic/shire-west-1/caa-checker/: deploy.yaml  service.yaml
deployment-examples/kubernetes/open-mpic/shire-west-1/caa-checker/files/: app.conf
deployment-examples/kubernetes/open-mpic/shire-west-1/dcv-checker/: kustomization.yaml  service.yaml
deployment-examples/kubernetes/open-mpic/shire-west-1/dcv-checker/files/: app.conf
deployment-examples/kubernetes/scripts/: generate-traffic.sh  grafana.sh  istio.sh  kiali.sh  prometheus.sh  setup-cluster.sh
deployment-examples/local-docker-compose/: README.md  caa_1.app.conf  caa_2.app.conf  compose.build.example.yaml  compose.example.yaml  compose.yaml  coordinator.app.conf  dcv_1.app.conf  dcv_2.app.conf
deployment-examples/local-docker-compose/bind_config/: named.conf
deployment-examples/local-docker-compose/common_config/: log_config.example.yaml  opentelemetry_config.example.env  uvicorn_config_example.yaml
deployment-examples/local-docker-compose/resources/: available_perspectives.example.yaml
deployment-examples/local-docker-compose/unbound_config/: unbound.conf  unbound.conf.example  unbound.example.conf
dns-resolver-bind/: Dockerfile  README.md  named.conf
dns-resolver-unbound/: unbound.conf
unbound/: Dockerfile  Dockerfile.example.klutchell  README.md  unbound.conf
